--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             background-color: #ffe6f2;
             color: #ff4d79;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Comic Sans MS', sans-serif;
             text-align: center;
             overflow-x: hidden;
         }
