--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
         body {
             background-color: #ffe6f2;
             color: #ff4d79;
-            font-family: 'Comic Sans MS', sans-serif;
+            font-family: 'Comic Sans MS';
             text-align: center;
             overflow-x: hidden;
         }
         .big-text {
             font-size: 4rem;
             font-weight: bold;
+            font-family: 'Comic Sans MS';
             margin-top: 20vh;
         }
         .scroll-text {
             font-size: 2rem;
             margin-top: 30vh;
+            font-family: 'Comic Sans MS';
             opacity: 0;
             transition: opacity 1s ease-in-out;
         }
@@ -44,6 +46,7 @@
         .btn-yes {
             background-color: #b5e7a0;
             color: #3d5a33;
+            font-family: 'Comic Sans MS';
             border: none;
         }
         .btn-yes:hover {
@@ -52,6 +55,7 @@
         .btn-no {
             background-color: #e57373;
             color: #5a2323;
+            font-family: 'Comic Sans MS';
             border: none;
         }
         .btn-no:hover {
