--- a/index.html
+++ b/index.html
@@ -6,23 +6,24 @@
     <title>Valentine's Proposal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        * {
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+        }
+
         body {
             background-color: #ffe6f2;
             color: #ff4d79;
-            font-family: 'Comic Sans MS';
             text-align: center;
             overflow-x: hidden;
         }
         .big-text {
             font-size: 4rem;
             font-weight: bold;
-            font-family: 'Comic Sans MS';
             margin-top: 20vh;
         }
         .scroll-text {
             font-size: 2rem;
             margin-top: 30vh;
-            font-family: 'Comic Sans MS';
             opacity: 0;
             transition: opacity 1s ease-in-out;
         }
@@ -46,7 +47,6 @@
         .btn-yes {
             background-color: #b5e7a0;
             color: #3d5a33;
-            font-family: 'Comic Sans MS';
             border: none;
         }
         .btn-yes:hover {
@@ -55,7 +55,6 @@
         .btn-no {
             background-color: #e57373;
             color: #5a2323;
-            font-family: 'Comic Sans MS';
             border: none;
         }
         .btn-no:hover {
@@ -99,29 +98,4 @@
             if (scrollPosition > screenHeight * 1.5) {
                 document.getElementById("text2").style.opacity = "1";
             }
-            if (scrollPosition > screenHeight * 2.5 && !isDialogVisible) {
-                document.getElementById("questionBox").style.display = "block";
-                isDialogVisible = true;
-            }
-        });
-
-        document.getElementById("yesButton").addEventListener("click", function() {
-            document.getElementById("question").innerText = "Thank you cutie! Now you're my sexy lil Valentine's date";
-            document.getElementById("subtext").style.display = "none";
-            document.getElementById("yesButton").style.display = "none";
-            document.getElementById("noButton").style.display = "none";
-        });
-
-        document.getElementById("noButton").addEventListener("click", function() {
-            noClickCount++;
-            if (noClickCount < 10) {
-                document.getElementById("question").innerText = messages[noClickCount - 1];
-                document.getElementById("subtext").style.display = "none";
-            } else {
-                document.getElementById("question").innerText = "Ab karke dikhao";
-                document.getElementById("noButton").style.display = "none";
-            }
-        });
-    </script>
-</body>
-</html>
+        
