--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <title>Valentine's Proposal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        * {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-        }
-
+        /* Default styles for desktop */
         body {
             background-color: #ffe6f2;
             color: #ff4d79;
@@ -60,6 +57,23 @@
         .btn-no:hover {
             background-color: #d66b6b;
         }
+
+        /* Mobile-specific styles */
+        @media (max-width: 768px) {
+            * {
+                font-family: 'Comic Sans MS', cursive, sans-serif !important;
+            }
+
+            .big-text {
+                font-size: 3rem; /* Adjust size for mobile */
+            }
+            .scroll-text {
+                font-size: 1.5rem; /* Adjust size for mobile */
+            }
+            .btn-yes, .btn-no {
+                font-size: 1.2rem; /* Adjust button text size */
+            }
+        }
     </style>
 </head>
 <body>
@@ -98,4 +112,29 @@
             if (scrollPosition > screenHeight * 1.5) {
                 document.getElementById("text2").style.opacity = "1";
             }
-        
+            if (scrollPosition > screenHeight * 2.5 && !isDialogVisible) {
+                document.getElementById("questionBox").style.display = "block";
+                isDialogVisible = true;
+            }
+        });
+
+        document.getElementById("yesButton").addEventListener("click", function() {
+            document.getElementById("question").innerText = "Thank you cutie! Now you're my sexy lil Valentine's date";
+            document.getElementById("subtext").style.display = "none";
+            document.getElementById("yesButton").style.display = "none";
+            document.getElementById("noButton").style.display = "none";
+        });
+
+        document.getElementById("noButton").addEventListener("click", function() {
+            noClickCount++;
+            if (noClickCount < 10) {
+                document.getElementById("question").innerText = messages[noClickCount - 1];
+                document.getElementById("subtext").style.display = "none";
+            } else {
+                document.getElementById("question").innerText = "Ab karke dikhao";
+                document.getElementById("noButton").style.display = "none";
+            }
+        });
+    </script>
+</body>
+</html>
