--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         /* Mobile-specific styles */
         @media (max-width: 768px) {
             * {
-                font-family: 'Comic Sans MS', cursive, sans-serif !important;
+                font-family: 'Comic Sans MS', cursive, sans-serif !important; /* Ensure Comic Sans MS is applied */
             }
 
             .big-text {
