--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
         .btn-no {
             background-color: #e57373;
-            color: #5a2323;
+            color: #ffff;
             border: none;
         }
         .btn-no:hover {
