--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
         .btn-yes:hover {
             background-color: #a2d89c;
         }
+        /* Make the text color white for the 'No' button in all cases */
         .btn-no {
             background-color: #e57373;
-            color: #ffff;
+            color: white;  /* Ensure the text color is white */
             border: none;
         }
         .btn-no:hover {
             background-color: #d66b6b;
+            color: white;  /* Ensure text color remains white on hover */
         }
 
         /* Mobile-specific styles */
